--- a/css/How-It-Works.css
+++ b/css/How-It-Works.css
@@ -1,11 +1,53 @@
+#focus{
+    padding-top: 3em;
+    padding-left: 5em;
+}
+
+#focus h3{
+    font-size: 1.2em;
+    color: grey;
+    padding-bottom: 1em;
+}
+
+#noembelish{
+    text-decoration: none;
+}
+
+#collect_info{
+    border: solid 1px black;
+    border-radius: 25px;
+    overflow: auto;
+}
+
+#useful{
+    background-color: blue;
+    color: white;
+}
+
+#doubletap{
+    padding-top: 1.3em;
+}
+
+#focus h5{
+    font-size: .9em;
+}
+
 .nav-item{
-    padding-right: 10px;
+    padding-left: 2em;
+    padding-right: .5em;
 }
 
 .navbar-brand{
-    padding-left: 30px;
+    padding-left: 1em;
 }
 
-#focus{
-    padding-left: 80px;
+#header{
+    padding-left: 1.5em;
+    padding-right: 3em;
 }
+
+.img-fluid{
+    max-width: 100%;
+    height: auto;
+}
+
