--- a/css/crmLanding.css
+++ b/css/crmLanding.css
@@ -10,3 +10,72 @@ h6 {
     padding: 100px;
     width: 700px;
 }
+
+footer {
+    background-color: rgb(0, 81, 255);
+    text-align: center;
+    margin-top: 10%;
+}
+
+.try-text {
+    color: white;
+    font-size: 75px;
+    padding-top: 5%;
+    padding-bottom: 2%;
+}
+
+.get-started-text {
+    color: white;
+    font-size: 30px;
+    padding-bottom: 2%;
+}
+
+#get-started {
+    background-color: #7FFF00;
+    border-radius: 6px;
+    padding: 15px;
+    padding-left: 70px;
+    padding-right: 90px;
+    position: relative;
+    right: 15%;
+    color: white;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.fa-comment-dots {
+    color: rgb(0, 81, 255);
+}
+
+#chat-with-us {
+    background-color: white;
+    padding: 15px;
+    position: relative;
+    left: 15%;
+    border-radius: 6px;
+    color: rgb(0, 81, 255);
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.options-text {
+    color: white;
+    font-size: 16px;
+    position: relative;
+    left: 2px;
+    padding-bottom: 15%;
+}
+
+.footer-buttons {
+    padding-top: 1%;
+    padding-bottom: 5%;
+}
+
+.fa-comment-dots {
+    padding-left: 5px;
+    padding-right: 10px;
+}
+
+.fa-chevron-double-right {
+    color: white;
+}
