--- a/css/signIn.css
+++ b/css/signIn.css
@@ -3,6 +3,13 @@
     border: 1px solid rgba(160, 93, 93, 0.288);
     margin-top: 80px;
     height: 40px;
+    background-image: url("/images/Page-1@2x.png") ;
+    background-size: 10px;
+    background-position: 5% 50%;
+    
+    
+    background-repeat: no-repeat;
+   
 
 }
 
@@ -11,6 +18,10 @@
     border-radius: 50px;
     margin-top: 30px;
     height: 40px;
+    background-image: url("/images/Header-Side-1@2x\ copy.png") ;
+    background-size: 25px;
+    background-position: 2% 50%;
+    background-repeat: no-repeat;
 }
 
 #password{
@@ -18,6 +29,11 @@
     border-radius: 50px; 
     margin-top: 30px;
     height: 40px;
+    background-image: url("/images/lock.png");
+    background-size: 35px;
+    background-position: 0% 50%;
+    background-repeat: no-repeat;
+    
 }
 
 
@@ -96,7 +112,6 @@ body{
    background-image: url("../images/Sign-In-background.png"); 
    background-position: absolute;
    background-size: 102%;
-   
 }
 
 .account{
@@ -116,6 +131,10 @@ body{
     border-radius: 50px;
     width: 180px;
     position: absolute;
+    right: 150px;
+}
+ 
+
     
 
 
