--- a/css/crmLanding.css
+++ b/css/crmLanding.css
@@ -103,8 +103,9 @@
     padding: 4em 1em 4em 1em;
 }
 
-#paidpic{
+#credit-card-picture{
     padding: 6em 1em 2em 1em;
+    border: black;
 }
 
 #paidtext{
@@ -116,20 +117,43 @@
 
 #paidtext h1{
     padding-top: 2em;
-    padding-bottom: 2em;
-    text-align: center;
+    padding-bottom: .5em;
+    text-align: left;
     font-size: 2em;
 }
 
 #paidtext h2{
     padding-bottom: 2em;
     padding-left: .5em;
-    font-size: 1.2em;
+    font-size: 15px;
+    text-align: left;
+    width: 70%;
 }
 
 #getpaidsooner{
     padding-bottom: 4em;
+
 }
+li{
+    font-size: 10px;
+    margin: 10px;
+    width: 53%;
+}
+
+#learn{
+    color: white;
+    background-color: blue;
+    border-radius: 5px;
+    border-color: white;
+    width: 200px;
+    margin-bottom: 70px;
+    margin-top: 30px;
+    background-image: url(/images/arrow-blue.png);
+    background-repeat: no-repeat;
+    background-size: 10%;
+    background-position: 99% 50%;
+}
+    
 
 #footer{
     background-color: blue;
@@ -148,7 +172,7 @@
 #squarepics .col-3{
     justify-content: center;
 
-  .container-focus {
+.container-focus{
     padding: 100px;
     width: 700px;
 }
