--- a/css/crmLanding.css
+++ b/css/crmLanding.css
@@ -155,17 +155,6 @@ li{
     background-size: 10%;
     background-position: 99% 50%;
 }
-    
-
-#footer{
-    background-color: blue;
-    color: white;
-    text-align: center;
-}
-
-#footerbutton{
-    background-color: #008000;
-}
 
 #squarepics{
     padding-bottom: 4em;
@@ -173,17 +162,12 @@ li{
 
 #squarepics .col-3{
     justify-content: center;
+}
 
 .container-focus{
     padding: 100px;
     width: 700px;
 }
-
-/* footer {
-    background-color: rgb(0, 81, 255);
-    text-align: center;
-    color: white;
-}*/
 
 #payments{
     padding: 22%;
@@ -205,3 +189,74 @@ li{
     padding-top: 4em;
     padding-bottom: 1em;
 }
+
+footer {
+    background-color: rgb(0, 81, 255);
+    text-align: center;
+    margin-top: 10%;
+}
+
+.try-text {
+    color: white;
+    padding-top: 5%;
+    padding-bottom: 2%;
+}
+
+.get-started-text {
+    color: white;
+    padding-bottom: 2%;
+}
+
+#get-started {
+    background-color: rgb(127,209,38);
+    border-radius: 6px;
+    padding: 8px;
+    padding-left: 40px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    margin-right: 1%;
+}
+
+.fa-angle-double-right {
+    padding-left: 2%;
+    padding-right: 1%;
+}
+
+.fa-comment-dots {
+    color: rgb(0, 81, 255);
+}
+
+#chat-with-us {
+    background-color: white;
+    padding: 8px;
+    border-radius: 6px;
+    color: rgb(0, 81, 255);
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 1%;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+
+.options-text {
+    color: white;
+    font-size: 16px;
+    position: relative;
+    left: 2px;
+    padding-bottom: 15%;
+}
+
+.footer-buttons {
+    padding-top: 1%;
+    padding-bottom: 5%;
+}
+
+.fa-comment-dots {
+    padding-left: 5px;
+    padding-right: 10px;
+}
+
+.fa-chevron-double-right {
+    color: white;
+} 
